# blockchain_cxx_backend

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
api/: server.py
api/scripts/: create_and_update_venv.sh  enter_venv.sh  os.sh  requirements.txt  variables.sh  venv_name.sh
src/: CMakeLists.txt  bindings.cpp  block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  sha256.cpp  sha256.hpp  simulate.cpp
test/: CMakeLists.txt
